# alen1.2

./: LICENSE  README.md  alen.yml  setup.cfg
.github/workflows/: ci.yml
alen/: __init__.py  cli.py  doctor.py  menu.py  policy.py  reporting.py  runner.py  webintel.py
assets/: eye.txt
tests/: test_smoke.py
