[metadata]
name = alen
version = 1.2.0
description = ALEN 1.2 — Legal-first web & network security audit (low false positives)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Alen
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Environment :: Console
    Intended Audience :: Information Technology
    Topic :: Security

[options]
packages = find:
python_requires = >=3.10
install_requires =
    rich>=13.7.0
    PyYAML>=6.0.1
    requests>=2.31.0

[options.entry_points]
console_scripts =
    alen = alen.cli:main
